# klartext

./: .gitignore  .pre-commit-config.yaml  .semgrepignore  404.html  CLAUDE.md  CNAME  README.md  index.html  klartext.docx  mkdocs.yml  pruefbericht-klartext.html  setup.sh  sitemap.xml  tach.toml
api/: .env.example  __init__.py  cli.py  dependencies.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  seeddata.py
api/exceptions/: __init__.py  base.py  causal_model.py  claim.py  narrative.py  narrative_unit.py  user.py  wirkmodell.py
api/models/: __init__.py  causal_model.py  claim.py  narrative.py  narrative_unit.py  user.py  wirkmodell.py
api/parsers/: __init__.py  docx_narrative_parser.py  markdown_narrative_parser.py  narrative_file_parser.py  narrative_parser.py
api/providers/: __init__.py  claim_extraction_provider.py  claude_claim_extraction_provider.py  claude_consistency_checker.py  claude_konsistenz_checker.py  claude_narrative_analysis_provider.py  claude_wirkgefuege_suggestion_provider.py  consistency_checker.py  konsistenz_checker.py  narrative_analysis_provider.py  wirkgefuege_suggestion_provider.py
api/repositories/: __init__.py  _supabase.py  causal_model_repository.py  claim_repository.py  narrative_repository.py  narrative_unit_repository.py  supabase_causal_model_repository.py  supabase_claim_repository.py  supabase_narrative_repository.py  supabase_narrative_unit_repository.py  supabase_user_repository.py  supabase_wirkmodell_repository.py  user_repository.py  wirkmodell_repository.py
api/routers/: __init__.py  causal_models.py  claims.py  debug.py  narrative_units.py  narratives.py  users.py  wirkmodelle.py
api/schemas/: causal_models.py  claims.py  debug.py  narrative_units.py  narratives.py  wirkmodelle.py
api/services/: causal_model_service.py  claim_extractor.py  claim_extractor_service.py  claim_service.py  debug_graph_service.py  health_service.py  narrative_analysis_service.py  narrative_import_service.py  narrative_service.py  narrative_unit_service.py  user_service.py  wirkgefuege_suggestion_service.py  wirkmodell_service.py
api/tests/: conftest.py  test_causal_model_composition.py  test_causal_model_domain.py  test_causal_model_federation.py  test_causal_model_repository.py  test_causal_model_router.py  test_causal_model_scope.py  test_causal_model_service.py  test_causal_relation_domain.py  test_check_test_coverage.py  test_claim_domain.py  test_claim_extractor_service.py  test_claim_repository.py  test_claim_service.py  test_claims_router.py  test_claude_claim_extraction_provider.py  test_claude_narrative_analysis_provider.py  test_claude_narrative_analysis_provider_parsing.py  test_claude_wirkgefuege_suggestion_provider.py  test_cli.py  test_consistency_checker.py  test_debug_graph_service.py  test_debug_router.py  test_docx_parser.py  test_extract_claims.py  test_health_router.py  test_konsistenz_checker.py  test_markdown_parser.py  test_narrative_analysis_service.py  test_narrative_domain.py  test_narrative_import_service.py  test_narrative_repository.py  test_narrative_repository_user.py  test_narrative_service.py  test_narrative_unit_domain.py  test_narrative_unit_repository.py  test_narrative_unit_service.py  test_narrative_units_router.py  test_narratives_router.py  test_scene_claims_router.py  (+11 more)
api/tests/fakes/: fake_causal_model_repository.py  fake_claim_repository.py  fake_consistency_checker.py  fake_narrative_analysis_provider.py  fake_narrative_repository.py  fake_narrative_unit_repository.py  fake_user_repository.py  fake_user_service.py  fake_wirkgefuege_suggestion_provider.py  fake_wirkmodell_repository.py
api/tests/infrastructure/: test_agent_trailer.py  test_allowlist_patterns.py  test_automemory_settings.py  test_ci_scope.py  test_classify_gate.py  test_compact_hook.py  (+24 more)
(+574 files in other folders)
