[project]
name = "klartext-api"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
klartext = "api.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["..", "."]
markers = ["integration: calls external services (deselect with '-m not integration')"]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
