[project]
name = "klartext-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "tach>=0.20.0",
    "semgrep>=1.100.0",
]

[project.scripts]
klartext = "api.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["..", "."]
markers = [
    "integration: calls external services — Supabase or Claude (deselect with '-m not integration')",
    "claude: calls the real Anthropic API — requires ANTHROPIC_API_KEY (subset of integration)",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D", "N"]
ignore = [
    "B008",   # FastAPI Depends() in default args
    "D102",   # method docstrings — @property getters are trivial per CLAUDE.md
    "D107",   # __init__ docstring — we use factory methods instead
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "D401",   # imperative mood — too prescriptive
    "N999",   # invalid module name — allow api package naming
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]  # test files: docstrings optional
"cli.py" = ["D103", "B904"]   # CLI: typer help strings + typer.Exit pattern
"seeddata.py" = ["D"]         # seed data file, not production code
"main.py" = ["E402"]          # load_dotenv() must run before other imports

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
